--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  title: One
   author: MyString
   summary: MyText
 
